--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -1,19 +1,22 @@
 <!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <title>Document</title>
-</head>
-<body>
-    <div class="p-5 mb-5 text-center</> bg-light">
-        <h1 class="mb-3">My Blog</h1>
-        <h4 class="mb-3">Welcome!</h4>
-    </div>
-    <div class="container">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/layout}">
+>
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport"-->
+<!--          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
+<!--    <meta http-equiv="X-UA-Compatible" content="ie=edge">-->
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">-->
+<!--    <title>Document</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--    <div class="p-5 mb-5 text-center</> bg-light">-->
+<!--        <h1 class="mb-3">My Blog</h1>-->
+<!--        <h4 class="mb-3">Welcome!</h4>-->
+<!--    </div>-->
+    <div class="container" layout:fragment="content">
         <button type="button" id="create-btn"
             th:onclick="|location.href='@{/new-article}'|"
             class="btn btn-secondary btn-sm mb-3"> Register</button>
@@ -30,6 +33,6 @@
             </div>
         </div>
     </div>
-<script src="/js/article.js"></script>
-</body>
+<!--<script src="/js/article.js"></script>-->
+<!--</body>-->
 </html>
