--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -17,7 +17,7 @@
                         <p class="fs-5 mb-4" th:text="${article.content}"></p>
                     </section>
                     <button type="button" class="btn btn-primary btn-sm">수정</button>
-                    <button type="button"
+                    <button id="delete-btn" type="button"
                             class="btn btn-secondary btn-sm">삭제</button>
                 </article>
             </div>
