--- a/src/main/resources/templates/newArticle.html
+++ b/src/main/resources/templates/newArticle.html
@@ -1,4 +1,9 @@
-<div class="container mt-5">
+<!doctype html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/layout}">
+>
+<div class="container mt-5" layout:fragment="content">
     <div class="row">
         <div class="col-lg-8">
             <article>
@@ -19,3 +24,4 @@
         </div>
     </div>
 </div>
+</html>
