--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -19,5 +19,6 @@
                 </div>
             </div>
         </div>
+        <button type="button" class="btn btn-secondary" onclick="location.href='/logout'">Logout</button>
     </div>
 </html>
